Update trainee profile to Zikriya Gull

--- a/trainees.html
+++ b/trainees.html
@@ -21,12 +21,8 @@
   </header>
   <main>
     <article>
-      <h2>Zaki Osman</h2>
+      <h2>Zikriya Gull</h2>
       <p>Level 3 BTEC IT student at Cheadle College, Manchester. Passionate about front-end development and eager to learn.</p>
-    </article>
-    <article>
-      <h2>Cody Smith</h2>
-      <p>Top of the class with Distinction-level work, specializing in responsive design and CSS animations.</p>
     </article>
   </main>
   <footer>
