Replace with advanced site version

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Jobs – Hot Beans Web</title>
+<title>About Us – Hot Beans Web</title>
 
 
 <style>/* ---------------------------------- */
@@ -398,11 +398,11 @@ html {
 </style></head>
 <body>
 <header>
-<h1>Jobs</h1>
+<h1>About Us</h1>
 <nav>
 <ul class="nav-links">
 <li><a class="nav-link" href="index.html">Home</a></li>
-<li><a class="nav-link" href="about.html">About Us</a></li>
+<li><a class="nav-link" href="jobs.html">Jobs</a></li>
 <li><a class="nav-link" href="specification.html">Specification</a></li>
 <li><a class="nav-link" href="links.html">Useful Links</a></li>
 <li><a class="nav-link" href="contact.html">Contact Us</a></li>
@@ -413,21 +413,16 @@ html {
 </header>
 <main>
 <section class="content">
-<h2>Join Our Team</h2>
+<h2>Who We Are</h2>
 <p>
-        Hot Beans Web is currently hiring for several entry-level and internship roles. If you’re passionate about code, UX design, or automated testing—and want hands-on experience working on live projects—check out our openings below. We believe in nurturing new talent, so we offer mentorship, biweekly code reviews, and the opportunity to present your work to real clients.
+        Hot Beans Web started in a small Manchester co-working space with just three passionate coders. In five years, we’ve grown into an international learning hub that trains hundreds of students each term. Our vision is to blend real-world projects with expert mentorship so that our graduates aren’t just “book smart,” but job-ready from day one.
       </p>
-<p>Current openings:</p>
-<ul class="job-list">
-<li><strong>Junior Front-End Developer</strong> – Required: HTML5, CSS3 (Flexbox/Grid), basic JavaScript. React or Vue familiarity is a plus. Part-time/remote options available.</li>
-<li><strong>QA Automation Tester</strong> – Required: JavaScript (ES6+), Jest, end-to-end testing with Cypress or Selenium. Competitive stipend + mentorship.</li>
-<li><strong>UI/UX Design Intern</strong> – Required: Figma or Sketch, basic user research. Opportunity to work on live UI revamps for small-business clients.</li>
-</ul>
 <p>
-        We offer flexible schedules, biweekly hackathons, and exposure to cutting-edge frameworks (e.g., Next.js, Tailwind CSS). Ready to level up? Click “Application Form” to apply with your resume, portfolio link, or GitHub. We’ll be in touch within 48 hours.
+        Our instructors hail from leading tech companies, open-source communities, and UX agencies. Whether you want to master React hooks, build Node.js microservices, or craft intuitive interfaces in Figma, you’ll learn directly from those in the trenches. At Hot Beans Web, we don’t just teach code—we forge careers.
       </p>
 </section>
 </main>
+<!-- COOKIE BANNER -->
 <div class="cookie-banner" id="cookie-banner">
     This site uses cookies to enhance your experience.
     <button onclick="acceptCookies()">Accept</button>
