--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Jobs – Hot Beans Web</title>
+<title>Contact Us – Hot Beans Web</title>
 
 
 <style>/* ---------------------------------- */
@@ -398,14 +398,14 @@ html {
 </style></head>
 <body>
 <header>
-<h1>Jobs</h1>
+<h1>Contact Us</h1>
 <nav>
 <ul class="nav-links">
 <li><a class="nav-link" href="index.html">Home</a></li>
 <li><a class="nav-link" href="about.html">About Us</a></li>
+<li><a class="nav-link" href="jobs.html">Jobs</a></li>
 <li><a class="nav-link" href="specification.html">Specification</a></li>
 <li><a class="nav-link" href="links.html">Useful Links</a></li>
-<li><a class="nav-link" href="contact.html">Contact Us</a></li>
 <li><a class="nav-link" href="apply.html">Application Form</a></li>
 <li><a class="nav-link" href="learnmore.html">Learn More</a></li>
 </ul>
@@ -413,19 +413,21 @@ html {
 </header>
 <main>
 <section class="content">
-<h2>Join Our Team</h2>
+<h2>Get In Touch</h2>
 <p>
-        Hot Beans Web is currently hiring for several entry-level and internship roles. If you’re passionate about code, UX design, or automated testing—and want hands-on experience working on live projects—check out our openings below. We believe in nurturing new talent, so we offer mentorship, biweekly code reviews, and the opportunity to present your work to real clients.
+        Have questions about our courses, corporate training, or project collaborations? We’re here to help. Reach out via:
       </p>
-<p>Current openings:</p>
-<ul class="job-list">
-<li><strong>Junior Front-End Developer</strong> – Required: HTML5, CSS3 (Flexbox/Grid), basic JavaScript. React or Vue familiarity is a plus. Part-time/remote options available.</li>
-<li><strong>QA Automation Tester</strong> – Required: JavaScript (ES6+), Jest, end-to-end testing with Cypress or Selenium. Competitive stipend + mentorship.</li>
-<li><strong>UI/UX Design Intern</strong> – Required: Figma or Sketch, basic user research. Opportunity to work on live UI revamps for small-business clients.</li>
+<p>
+<strong>Email:</strong> <a class="inline-link" href="mailto:support@hotbeansweb.com">support@hotbeansweb.com</a><br/>
+<strong>Phone:</strong> +44 1234 567890<br/>
+<strong>Address:</strong> 10 Tech Street, Manchester, UK
+      </p>
+<p>Follow us on social media:</p>
+<ul class="social-list">
+<li><a class="nav-link" href="https://twitter.com/hotbeansweb" rel="noopener" target="_blank">Twitter</a></li>
+<li><a class="nav-link" href="https://linkedin.com/company/hotbeansweb" rel="noopener" target="_blank">LinkedIn</a></li>
+<li><a class="nav-link" href="https://github.com/hotbeansweb" rel="noopener" target="_blank">GitHub</a></li>
 </ul>
-<p>
-        We offer flexible schedules, biweekly hackathons, and exposure to cutting-edge frameworks (e.g., Next.js, Tailwind CSS). Ready to level up? Click “Application Form” to apply with your resume, portfolio link, or GitHub. We’ll be in touch within 48 hours.
-      </p>
 </section>
 </main>
 <div class="cookie-banner" id="cookie-banner">
