--- a/learnmore.html
+++ b/learnmore.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Jobs – Hot Beans Web</title>
+<title>Cookie Policy – Hot Beans Web</title>
 
 
 <style>/* ---------------------------------- */
@@ -398,42 +398,34 @@ html {
 </style></head>
 <body>
 <header>
-<h1>Jobs</h1>
+<h1>Why We Use Cookies</h1>
 <nav>
 <ul class="nav-links">
 <li><a class="nav-link" href="index.html">Home</a></li>
 <li><a class="nav-link" href="about.html">About Us</a></li>
+<li><a class="nav-link" href="jobs.html">Jobs</a></li>
 <li><a class="nav-link" href="specification.html">Specification</a></li>
 <li><a class="nav-link" href="links.html">Useful Links</a></li>
 <li><a class="nav-link" href="contact.html">Contact Us</a></li>
 <li><a class="nav-link" href="apply.html">Application Form</a></li>
-<li><a class="nav-link" href="learnmore.html">Learn More</a></li>
 </ul>
 </nav>
 </header>
 <main>
 <section class="content">
-<h2>Join Our Team</h2>
 <p>
-        Hot Beans Web is currently hiring for several entry-level and internship roles. If you’re passionate about code, UX design, or automated testing—and want hands-on experience working on live projects—check out our openings below. We believe in nurturing new talent, so we offer mentorship, biweekly code reviews, and the opportunity to present your work to real clients.
+        Cookies are small text files stored on your device by your browser. We use them for:
       </p>
-<p>Current openings:</p>
-<ul class="job-list">
-<li><strong>Junior Front-End Developer</strong> – Required: HTML5, CSS3 (Flexbox/Grid), basic JavaScript. React or Vue familiarity is a plus. Part-time/remote options available.</li>
-<li><strong>QA Automation Tester</strong> – Required: JavaScript (ES6+), Jest, end-to-end testing with Cypress or Selenium. Competitive stipend + mentorship.</li>
-<li><strong>UI/UX Design Intern</strong> – Required: Figma or Sketch, basic user research. Opportunity to work on live UI revamps for small-business clients.</li>
+<ul>
+<li>Personalizing your experience (remembering theme preferences, language).</li>
+<li>Tracking usage data (which pages you visit, session duration) to improve our content.</li>
+<li>Keeping essential site functionality (e.g., staying logged in, saving form input).</li>
 </ul>
 <p>
-        We offer flexible schedules, biweekly hackathons, and exposure to cutting-edge frameworks (e.g., Next.js, Tailwind CSS). Ready to level up? Click “Application Form” to apply with your resume, portfolio link, or GitHub. We’ll be in touch within 48 hours.
+        By clicking “Accept,” you consent to these cookies. If you click “Reject,” only strictly necessary cookies will be used, which may limit some features. You can change your consent at any time through your browser settings.
       </p>
 </section>
 </main>
-<div class="cookie-banner" id="cookie-banner">
-    This site uses cookies to enhance your experience.
-    <button onclick="acceptCookies()">Accept</button>
-<button onclick="rejectCookies()">Reject</button>
-<a href="learnmore.html">Learn More</a>
-</div>
 <footer>
 <p>© 2025 Hot Beans Web | Designed by Zaki</p>
 </footer>
