--- a/links.html
+++ b/links.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Jobs – Hot Beans Web</title>
+<title>Useful Links – Hot Beans Web</title>
 
 
 <style>/* ---------------------------------- */
@@ -398,13 +398,13 @@ html {
 </style></head>
 <body>
 <header>
-<h1>Jobs</h1>
+<h1>Useful Links</h1>
 <nav>
 <ul class="nav-links">
 <li><a class="nav-link" href="index.html">Home</a></li>
 <li><a class="nav-link" href="about.html">About Us</a></li>
+<li><a class="nav-link" href="jobs.html">Jobs</a></li>
 <li><a class="nav-link" href="specification.html">Specification</a></li>
-<li><a class="nav-link" href="links.html">Useful Links</a></li>
 <li><a class="nav-link" href="contact.html">Contact Us</a></li>
 <li><a class="nav-link" href="apply.html">Application Form</a></li>
 <li><a class="nav-link" href="learnmore.html">Learn More</a></li>
@@ -413,18 +413,42 @@ html {
 </header>
 <main>
 <section class="content">
-<h2>Join Our Team</h2>
-<p>
-        Hot Beans Web is currently hiring for several entry-level and internship roles. If you’re passionate about code, UX design, or automated testing—and want hands-on experience working on live projects—check out our openings below. We believe in nurturing new talent, so we offer mentorship, biweekly code reviews, and the opportunity to present your work to real clients.
-      </p>
-<p>Current openings:</p>
-<ul class="job-list">
-<li><strong>Junior Front-End Developer</strong> – Required: HTML5, CSS3 (Flexbox/Grid), basic JavaScript. React or Vue familiarity is a plus. Part-time/remote options available.</li>
-<li><strong>QA Automation Tester</strong> – Required: JavaScript (ES6+), Jest, end-to-end testing with Cypress or Selenium. Competitive stipend + mentorship.</li>
-<li><strong>UI/UX Design Intern</strong> – Required: Figma or Sketch, basic user research. Opportunity to work on live UI revamps for small-business clients.</li>
+<h2>Developer Resources</h2>
+<p>Below are hand-picked references to deepen your skills as you build real projects:</p>
+<ul class="links-list">
+<li>
+<a href="https://developer.mozilla.org/" rel="noopener" target="_blank">
+            MDN Web Docs
+          </a> 
+          – Official documentation for HTML, CSS, JavaScript, plus tutorials.
+        </li>
+<li>
+<a href="https://www.w3schools.com/" rel="noopener" target="_blank">
+            W3Schools
+          </a> 
+          – Interactive examples and code snippets for front-end basics.
+        </li>
+<li>
+<a href="https://css-tricks.com/" rel="noopener" target="_blank">
+            CSS-Tricks
+          </a> 
+          – Deep dives on modern CSS techniques, animations, Flexbox, Grid.
+        </li>
+<li>
+<a href="https://github.com/" rel="noopener" target="_blank">
+            GitHub
+          </a> 
+          – Host code, explore open-source projects, submit pull requests.
+        </li>
+<li>
+<a href="https://reactjs.org/" rel="noopener" target="_blank">
+            React Official
+          </a> 
+          – Learn component-based front-end development.
+        </li>
 </ul>
 <p>
-        We offer flexible schedules, biweekly hackathons, and exposure to cutting-edge frameworks (e.g., Next.js, Tailwind CSS). Ready to level up? Click “Application Form” to apply with your resume, portfolio link, or GitHub. We’ll be in touch within 48 hours.
+        As you progress through Hot Beans Web lessons, try cloning small repositories, forking open-source projects, and submitting pull requests—hands-on practice cements your knowledge.
       </p>
 </section>
 </main>
