--- a/specification.html
+++ b/specification.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Jobs – Hot Beans Web</title>
+<title>Specification – Hot Beans Web</title>
 
 
 <style>/* ---------------------------------- */
@@ -398,12 +398,12 @@ html {
 </style></head>
 <body>
 <header>
-<h1>Jobs</h1>
+<h1>Specification</h1>
 <nav>
 <ul class="nav-links">
 <li><a class="nav-link" href="index.html">Home</a></li>
 <li><a class="nav-link" href="about.html">About Us</a></li>
-<li><a class="nav-link" href="specification.html">Specification</a></li>
+<li><a class="nav-link" href="jobs.html">Jobs</a></li>
 <li><a class="nav-link" href="links.html">Useful Links</a></li>
 <li><a class="nav-link" href="contact.html">Contact Us</a></li>
 <li><a class="nav-link" href="apply.html">Application Form</a></li>
@@ -413,18 +413,20 @@ html {
 </header>
 <main>
 <section class="content">
-<h2>Join Our Team</h2>
+<h2>Our Technical Stack</h2>
 <p>
-        Hot Beans Web is currently hiring for several entry-level and internship roles. If you’re passionate about code, UX design, or automated testing—and want hands-on experience working on live projects—check out our openings below. We believe in nurturing new talent, so we offer mentorship, biweekly code reviews, and the opportunity to present your work to real clients.
+        At Hot Beans Web, we align our curriculum with current industry demand. You’ll master:
       </p>
-<p>Current openings:</p>
-<ul class="job-list">
-<li><strong>Junior Front-End Developer</strong> – Required: HTML5, CSS3 (Flexbox/Grid), basic JavaScript. React or Vue familiarity is a plus. Part-time/remote options available.</li>
-<li><strong>QA Automation Tester</strong> – Required: JavaScript (ES6+), Jest, end-to-end testing with Cypress or Selenium. Competitive stipend + mentorship.</li>
-<li><strong>UI/UX Design Intern</strong> – Required: Figma or Sketch, basic user research. Opportunity to work on live UI revamps for small-business clients.</li>
+<ul class="spec-list">
+<li>HTML5 &amp; Semantic Markup: Accessibility best practices (ARIA roles, alt text)</li>
+<li>CSS3: Flexbox, Grid layout, BEM naming conventions, responsive breakpoints</li>
+<li>JavaScript (ES6+): Promises, async/await, DOM manipulation, module bundling</li>
+<li>Responsive &amp; Mobile-First Design: Fluid grids, media queries, viewport configurations</li>
+<li>Version Control: Git &amp; GitHub workflows (branches, pull requests, code reviews)</li>
+<li>Front-End Libraries: Intro to React or Vue (components, state management, hooks/composables)</li>
 </ul>
 <p>
-        We offer flexible schedules, biweekly hackathons, and exposure to cutting-edge frameworks (e.g., Next.js, Tailwind CSS). Ready to level up? Click “Application Form” to apply with your resume, portfolio link, or GitHub. We’ll be in touch within 48 hours.
+        We also cover back-end fundamentals (Node.js + Express), RESTful API design, database integration (MongoDB), and basic DevOps (GitHub Actions CI/CD). Security topics (HTTPS, CORS, OWASP Top 10) and performance optimization (code splitting, lazy loading) round out the specification.
       </p>
 </section>
 </main>
