--- a/thankyou.html
+++ b/thankyou.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Thank You – Hot Beans Web</title>
-  <link rel="stylesheet" href="styles.css">
-  <style>
-    body { font-family: sans-serif; padding: 2rem; background: #F5F5F5; text-align: center; }
-    .message-box { background: #E3F7E7; border: 1px solid #A3D9A5; padding: 2rem; display: inline-block; border-radius: 4px; }
-    .message-box h1 { color: #4A2C2A; }
-    .message-box a { display: inline-block; margin-top: 1rem; padding: 0.5rem 1rem; background: #4A2C2A; color: #fff; text-decoration: none; border-radius: 3px;}
-  </style>
+    <meta charset="UTF-8">
+    <title>Thank You – Hot Beans Web</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        body { font-family: sans-serif; padding: 2rem; background: #F5F5F5; text-align: center; }
+        .message-box { background: #E3F7E7; border: 1px solid #A3D9A5; padding: 2rem; display: inline-block; border-radius: 4px; }
+        .message-box h1 { color: #4A2C2A; }
+        .message-box a { display: inline-block; margin-top: 1rem; padding: 0.5rem 1rem; background: #4A2C2A; color: #fff; text-decoration: none; border-radius: 3px;}
+    </style>
 </head>
 <body>
-  <div class="message-box">
-    <h1>Thank You!</h1>
-    <p>Your application has been received. We will be in touch soon.</p>
-    <a href="application.html">Submit another response</a>
-  </div>
+    <div class="message-box">
+        <h1>Thank You!</h1>
+        <p>Your application has been received. We will be in touch soon.</p>
+        <a href="apply.html">Submit another response</a>
+    </div>
 </body>
 </html>
