--- a/apply.html
+++ b/apply.html
@@ -81,7 +81,7 @@
 
     <h1>Application Form</h1>
 
-    <form action="#" method="post">
+    <form onsubmit="alert('Application Submitted!'); return false;">
         <label for="fullname">Full Name:</label>
         <input type="text" id="fullname" name="fullname" required>
 
